--- a/Prototype/Protoype/Protoype/Protoype.csproj
+++ b/Prototype/Protoype/Protoype/Protoype.csproj
@@ -43,11 +43,17 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="EnumSword.cs" />
+    <Compile Include="IPrototypeManager.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="IPrototype.cs" />
+    <Compile Include="PrototypeManager.cs" />
+    <Compile Include="Sword.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+    <None Include="SwordConf.csv" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
